# bot-testing

./: .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: antibot-gantt.gan  pre-mortem-bot-1.md
memory/: 00_index.md  01_infrastructure.md  02_operations_access.md  03_pipelines.md  04_dependencies.md  05_quirks.md  06_changelog.md  07_objectives.md  08_endpoints.md  secrets.md.example
scripts/: README.md  bootstrap-vm.sh  collect-reports.sh  configure-linode-cli.sh  provision-fleet.sh  seed-test-visitors.sh  teardown-fleet.sh
src/waf_bots/: __init__.py  __main__.py  cli.py
src/waf_bots/bots/: ato.py  base.py  browser_bot.py  content_scraping.py  dos.py  http_bot.py  price_scraping.py  registration.py
src/waf_bots/common/: browser.py  http.py  logger.py  reporter.py  waf_signals.py
tests/: conftest.py  test_bot_runner.py  test_browser_bots.py  test_cli.py  test_http.py  test_http_bots.py  test_registration_bot.py  test_reporter.py  test_waf_signals.py
